# SPDX-FileCopyrightText: 2023 Frieder Hannenheim <frieder.hannenheim@pm.me>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "letters"
version = "0.1.0"
authors = ["Frieder Hannenheim <frieder.hannenheim@pm.me>"]
edition = "2021"
rust-version = "1.65"
license = "AGPL-3.0-or-later"


[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
base64-url = "2.0.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
egui_dock = { git = "https://github.com/Adanos020/egui_dock.git", branch = "release-0.7", features = ["serde"] }
egui_extras = { version = "0.22.0", default-features = false }
url = { version = "2.4.1", features = ["serde"] }
url-escape = "0.1.1"
poll-promise = "0.3.0"
ehttp = "0.3.0"
percent-encoding = "2.3.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
